<resources>
    <string name="app_name">Kalendarium</string>
    <string name="action_settings">Settings</string>

    <string name="category_household">Household</string>
    <string name="category_shopping">Shopping</string>
    <string name="category_games">Games</string>
    <string name="category_cosmetics">Cosmetics</string>
    <string name="category_activities">Activities</string>
    <string name="category_food">Food</string>
    <string name="category_plus">Plus</string>

    <string name="overview_daily_available">Daily available:</string>
    <string name="overview_weekly_available">Weekly available:</string>
    <string name="overview_remaining_month">Remaining this month:</string>

    <string name="currency_euro">€</string>
    <string name="sign_percentage">%</string>

    <string-array name="spinner_dummy_entries">
        <item>April - 2017</item>
        <item>March - 2017</item>
        <item>February - 2017</item>
        <item>January - 2017</item>
        <item>December - 2016</item>
        <item>November - 2016</item>
    </string-array>

    <string name="category_detail_sum">Sum:</string>
    <string name="category_detail_overall_proportion">Overall proportion:</string>
    <string name="category_detail_activity">Kategorie Ansicht</string>
    <string name="expense_create_activity">Neuen Eintrag erstellen</string>
    <string name="settings_activity">Settings</string>

    <string-array name="navigation_entries">
        <item>Overview</item>
        <item>Statistics</item>
        <item>History</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_expense_list">Ausgaben</string>
    <string name="title_statistic">Statistic</string>
    <string name="title_capital">Capital</string>
    <string name="title_intervals">Interval</string>
    <string name="minutes">mins</string>
    <string name="minute">min</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="day">day</string>
    <string name="days">days</string>

    <string name="current_interval_id">current_interval_id</string>
    <string name="default_interval_id">-1</string>
</resources>
