<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_grey_400"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/AppTheme.AppBar"
        android:titleTextColor="@color/colorTextLight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <Button
        android:id="@+id/button_topic_activities"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="24dp"
        android:background="@color/amber_600"
        android:drawableTint="@color/colorTextLight"
        android:drawableTop="@drawable/ic_local_bar_black_24dp"
        android:padding="8dp"
        android:text="@string/category_activities"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_topic_household"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button_topic_cosmetics"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="24dp"
        android:background="@color/green_500"
        android:drawableTint="@color/colorTextLight"
        android:drawableTop="@drawable/ic_spa_black_24dp"
        android:padding="8dp"
        android:text="@string/category_cosmetics"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_topic_games"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button_topic_games"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/red_500"
        android:drawableTint="@color/colorTextLight"
        android:drawableTop="@drawable/ic_videogame_asset_black_24dp"
        android:padding="8dp"
        android:text="@string/category_games"
        app:layout_constraintLeft_toRightOf="@+id/button_topic_cosmetics"
        app:layout_constraintRight_toLeftOf="@+id/button_topic_food"
        app:layout_constraintTop_toBottomOf="@+id/button_topic_household" />

    <Button
        android:id="@+id/button_topic_plus"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@color/purple_500"
        android:drawableTint="@color/colorTextLight"
        android:drawableTop="@drawable/ic_add_black_24dp"
        android:padding="8dp"
        android:text="@string/category_plus"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/button_topic_games"
        app:layout_constraintRight_toRightOf="@+id/button_topic_games"
        app:layout_constraintTop_toBottomOf="@+id/button_topic_games" />

    <Button
        android:id="@+id/button_topic_food"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="16dp"
        android:background="@color/yellow_600"
        android:drawableTint="@color/colorTextLight"
        android:drawableTop="@drawable/ic_restaurant_black_24dp"
        android:padding="8dp"
        android:text="@string/category_food"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_topic_games"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button_topic_household"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/teal_500"
        android:drawableTint="@color/colorTextLight"
        android:drawableTop="@drawable/ic_store_black_24dp"
        android:padding="8dp"
        android:text="@string/category_household"
        app:layout_constraintLeft_toRightOf="@+id/button_topic_activities"
        app:layout_constraintRight_toLeftOf="@+id/button_topic_shopping"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_expense" />

    <Button
        android:id="@+id/button_topic_shopping"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="16dp"
        android:background="@color/blue_500"
        android:drawableTint="@color/colorTextLight"
        android:drawableTop="@drawable/ic_local_mall_black_24dp"
        android:padding="8dp"
        android:text="@string/category_shopping"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_topic_household"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/edit_text_expense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:inputType="numberDecimal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

</android.support.constraint.ConstraintLayout>