<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="December(2017) - Household"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/textViewSumLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_detail_sum"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/textViewOverallProportionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_detail_overall_proportion"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewSumLabel"
        app:layout_constraintRight_toLeftOf="@+id/textViewOverallProportion"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/textViewSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="76,40"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewSumLabel"
        app:layout_constraintLeft_toRightOf="@+id/textViewSumLabel"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_euro"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewSum"
        app:layout_constraintLeft_toRightOf="@+id/textViewSum"
        />

    <TextView
        android:id="@+id/textViewOverallProportion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="41,82"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewOverallProportionLabel"
        app:layout_constraintRight_toLeftOf="@+id/textView11"/>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_percentage"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewOverallProportion"
        android:layout_marginEnd="16dp"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOverallProportionLabel"
        tools:listitem="@layout/category_detail_line_item"/>
</android.support.constraint.ConstraintLayout>