<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/blue_grey_400"
                                             android:orientation="vertical">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/overview_remaining_month"
        android:textColor="@color/colorTextLight"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewWeekly"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:singleLine="true"
        android:text="266,80"
        android:textColor="@color/colorTextLight"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView5"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_euro"
        android:textColor="@color/colorTextLight"
        android:textSize="40sp"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="24dp"
        android:text="@string/currency_euro"
        android:textColor="@color/colorTextLight"
        android:textSize="40sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewWeekly"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/textViewWeekly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:singleLine="true"
        android:text="79,80"
        android:textColor="@color/colorTextLight"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textViewWeeklyLabel"/>

    <TextView
        android:id="@+id/textViewWeeklyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/overview_weekly_available"
        android:textColor="@color/colorTextLight"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="39dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewDaily"/>

    <TextView
        android:id="@+id/textViewDailyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overview_daily_available"
        android:textColor="@color/colorTextLight"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/textViewDaily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="11,40"
        android:textColor="@color/colorTextLight"
        android:textSize="80sp"
        android:textStyle="bold"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewDailyLabel"
        app:layout_constraintRight_toLeftOf="@+id/textView2"
        android:layout_marginRight="0dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_euro"
        android:textColor="@color/colorTextLight"
        android:textSize="60sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewDaily"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent"/>
</android.support.constraint.ConstraintLayout>